--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,5 +3,17 @@
   <p><%= @restaurant.address %></p>
   <p><%= @restaurant.category %></p>
   <p>📞 <%= @restaurant.phone_number %></p>
-  <%= link_to "🥘", restaurants_path, class: 'btn btn-block'  %>
+  <div class="form-group">
+    <% @restaurant.reviews.each do |review| %>
+      <h3><%= review.content %></h3>
+      <h2><%= review.rating  %></h2>
+      <hr>
+    <% end %>
+  </div>
+  <div class="form-group">
+    <%= link_to 'Add', new_restaurant_review_path(@restaurant), class: "btn btn-success" %>
+    <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-primary" %>
+    <%= link_to 'Back', restaurants_path, class: "btn btn-secondary" %>
+  </div>
+
 </div>
