--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
-  <h1>Add a Restaurant</h1>
-  <%= render 'restaurants/form' %>
+<div class="container d-flex justify-content-center">
+  <div class="card col-6 p-3" style="width: 22rem; margin-top: 50px;">
+    <h1>Add a Restaurant</h1>
+    <%= render 'restaurants/form' %>
+  </div>
 </div>
