--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,11 +1,13 @@
-<div class="container">
-  <%= simple_form_for [@restaurant, @review] do |f| %>
-    <%= f.input :content  %>
-    <%= f.input :rating, collection: 0..5, include_blank: false %>
-    <%= f.submit class: "btn btn-primary btn-block"  %>
-  <% end %>
-  <div class="containter my-3">
-    <%= link_to 'Back', restaurant_path(@restaurant), class: "btn btn-primary" %>
-    <%= link_to 'Home', restaurants_path, class: "btn btn-secondary" %>
+<div class="container d-flex justify-content-center">
+  <div class="card col-6 p-3" style="width: 22rem; margin-top: 50px;">
+    <%= simple_form_for [@restaurant, @review] do |f| %>
+      <%= f.input :content  %>
+      <%= f.input :rating, collection: 0..5, include_blank: false %>
+      <%= f.submit class: "btn btn-primary btn-block"  %>
+    <% end %>
+    <div class="containter my-3">
+      <%= link_to 'Back', restaurant_path(@restaurant), class: "btn btn-primary" %>
+      <%= link_to 'Home', restaurants_path, class: "btn btn-secondary" %>
+    </div>
   </div>
 </div>
