added visual rating system

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -40,16 +40,32 @@
   <div class="card col-6" style="width: 22rem; margin-top: 50px;">
     <img class="card-img-top py-3" src="https://source.unsplash.com/1600x900/?food,delicious" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title"><%= @restaurant.name %></h5>
+      <h4 class="card-title"><%= @restaurant.name %></h4>
       <p class="card-text"><%= @restaurant.address %></p>
       <p class="card-text"><%= @restaurant.category %></p>
       <p class="card-text"><%= @restaurant.phone_number %></p>
     </div>
     <ul class="list-group list-group-flush">
       <% @restaurant.reviews.each do |review| %>
-      <li class="list-group-item"><%= review.content %></li>
-      <li class="list-group-item"><%= review.rating %></li>
-      <%= link_to 'Delete', review_path(review), method: :delete %>
+      <li class="list-group-item">
+        <h4><%= review.content %></h4>
+        <div class="d-flex justify-content-between">
+          <h4 class="pl-0">Rating:<% review.rating.times do %>
+            <i class="fas fa-star" style="color: rgba(255, 255, 0, 0.9);"></i>
+          <% end %>
+          <% if 5 - review.rating > 0 %>
+            <% (5 - review.rating).times do %>
+              <i class="far fa-star" style="color: rgba(245, 245, 0, 0.897);"></i>
+            <% end %>
+          <% end %>
+          </h4>
+          <h4>
+            <%= link_to review_path(review), method: :delete, data: { confirm: "Are you sure you want to delete this review, buddy?" } do %>
+              <i class="fas fa-times"></i>
+            <% end %>
+          </h4>
+        </div>
+      </li>
       <% end %>
     </ul>
     <div class="card-body">
