--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <a class="navbar-brand" href="#">
     <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
-</a>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,8 +37,6 @@
 
 
 
-
-
 <div class="container">
   <h1>Restaurants</h1>
   <div class="cards">
@@ -48,7 +46,22 @@
         <div class="card-product-infos">
           <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
           <p><%= restaurant.category %> - <%= restaurant.address %></p>
-          <p>Phone Number:<%= restaurant.phone_number %></p>
+          <p>Phone Number: <%= restaurant.phone_number %></p>
+          <p>Average Rating:
+          <% restaurant.average_rating.times do %>
+            <i class="fas fa-star" style="color: rgba(255, 255, 0, 0.9);"></i>
+          <% end %>
+          <% if 5 - restaurant.average_rating > 0 %>
+            <% (5 - restaurant.average_rating).times do %>
+              <i class="far fa-star" style="color: rgba(245, 245, 0, 0.897);"></i>
+            <% end %>
+          <% end %>
+          </p>
+        </div>
+        <div class="p-2 mt-5">
+          <%= link_to restaurant_path(restaurant), method: :delete, data: { confirm: "Are you sure you want to delete this restaurant, buddy?" } do %>
+            <i class="fas fa-times"></i>
+          <% end %>
         </div>
       </div>
     <% end %>
